# huadian

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  Makefile  NOTICE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tsconfig.base.json  tsconfig.json  turbo.json  华典智谱_架构设计文档_v1.0.md  华典智谱_架构设计文档_v2.0.md
framework/: README.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.md  __init__.py  pyproject.toml
framework/audit_triage/: CONCEPTS.md  README.md  __init__.py  authz.py  cross-domain-mapping.md  reasons.py  service.py  store.py  types.py
framework/audit_triage/examples/huadian_classics/: README.md  __init__.py  allowlist.py  asyncpg_store.py  schema.sql  test_soft_equivalent.py
framework/audit_triage/tests/: __init__.py  conftest.py  test_service.py
framework/identity_resolver/: CONCEPTS.md  README.md  __init__.py  cross-domain-mapping.md  entity.py  guards.py  r6_seed_match.py  types.py
framework/identity_resolver/examples/huadian_classics/: __init__.py  di_honorific_hint.py  dictionary_loaders.py  dynasty_guard.py  guard_chains.py  merge_applier.py  non_person_classifier.py  person_loader.py  r2_di_prefix_rule.py  reason_builder_zh.py  seed_match_adapter.py  state_prefix_guard.py  test_byte_identical.py
framework/identity_resolver/tests/: __init__.py  conftest.py  test_apply_merges.py  test_canonical.py  test_entity.py  test_guards.py  test_resolve.py  test_rules.py  test_types.py  test_union_find.py
framework/invariant_scaffold/: CONCEPTS.md  README.md  __init__.py  cross-domain-mapping.md  invariant.py  port.py
framework/invariant_scaffold/patterns/: containment.py  lower_bound.py  orphan_detection.py  upper_bound.py
framework/invariant_scaffold/tests/: __init__.py  conftest.py  test_invariant.py  test_patterns_cardinality_bound.py  test_patterns_containment.py  test_patterns_lower_bound.py  test_patterns_orphan_detection.py  test_patterns_upper_bound.py  test_runner.py  test_self_test.py  test_types.py
framework/role-templates/: README.md  backend-engineer.md  chief-architect.md  cross-domain-mapping.md  data-analyst.md  devops-engineer.md  domain-expert.md  frontend-engineer.md  pipeline-engineer.md  product-manager.md  qa-engineer.md  tagged-sessions-protocol.md  ui-ux-designer.md
framework/sprint-templates/: README.md  brief-template.md  gate-checklist-template.md  retro-template.md  stop-rules-catalog.md
framework/sprint-templates/stage-templates/: stage-2-full-template.md  stage-3-review-template.md  stage-4-apply-template.md  stage-5-closeout-template.md
kb_forge/: README.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.md  __init__.py  conftest.py  pyproject.toml  requirements-dev.txt
kb_forge/audit_triage/: CONCEPTS.md  README.md  __init__.py  cross-domain-mapping.md  types.py
kb_forge/audit_triage/tests/: __init__.py  conftest.py  test_service.py
kb_forge/identity_resolver/: CONCEPTS.md  README.md  __init__.py  apply_merges.py  canonical.py  cross-domain-mapping.md  dry_run_report.py  entity.py  guards.py  r6_seed_match.py  resolve.py  rules.py  rules_protocols.py  union_find.py  utils.py
kb_forge/identity_resolver/tests/: __init__.py  conftest.py  test_apply_merges.py  test_canonical.py  test_entity.py  test_guards.py  test_resolve.py  test_rules.py  test_types.py  test_union_find.py
kb_forge/invariant_scaffold/: CONCEPTS.md  README.md  __init__.py  cross-domain-mapping.md  runner.py  self_test.py  types.py
kb_forge/invariant_scaffold/patterns/: __init__.py  cardinality_bound.py  containment.py
kb_forge/invariant_scaffold/tests/: __init__.py  conftest.py  test_invariant.py  test_patterns_cardinality_bound.py  test_patterns_containment.py  test_patterns_lower_bound.py  test_patterns_orphan_detection.py  test_patterns_upper_bound.py  test_runner.py  test_self_test.py  test_types.py
kb_forge/role-templates/: README.md  backend-engineer.md  chief-architect.md  cross-domain-mapping.md  data-analyst.md  devops-engineer.md  domain-expert.md  frontend-engineer.md  pipeline-engineer.md  product-manager.md  qa-engineer.md  tagged-sessions-protocol.md  ui-ux-designer.md
kb_forge/sprint-templates/: README.md  brief-template.md  retro-template.md  stop-rules-catalog.md
kb_forge/sprint-templates/stage-templates/: stage-0-prep-template.md  stage-1-smoke-template.md  stage-2-full-template.md  stage-5-closeout-template.md
services/pipeline/: pyproject.toml  pyrightconfig.json
services/pipeline/config/: traceguard_policy.yml
services/pipeline/migrations/: 0001_add_traceguard_raw_and_idempotent_idx.sql  0002_add_identity_merge_support.sql  0003_fix_dishun_misattribution.sql  0004_persons_slug_partial_unique.sql  0005_t-p0-022-f10-primary-residual-demote.sql  0006_t-p0-020-persons-check-constraint.sql  0007_t-p0-016-is-primary-backfill.sql  0008_t-p0-023-seed-dictionary-enum.sql  0009_dictionary_seed_schema.sql  0010_rollback.sql  0010_seed_mappings_add_pending_review_status.sql  0011_rollback.sql  0011_seed_unique_index_naming_alignment.sql  0012_add_pending_merge_reviews.sql  0013_add_entity_split_log.sql  0014_add_triage_decisions.sql
services/pipeline/scripts/: T-P0-014-dry-run.json  T-P0-014-s1-findings.md  T-P0-014-soft-delete.sql  T-P0-015-dry-run.json  T-P0-015-merge.sql  T-P0-015-s1-evidence.md  T-P1-002-backfill.sql  T-P1-002-rollback.sql  apply_resolve.py  backfill_evidence.py  backfill_pending_merge_reviews.py  backfill_triage_decisions.py  dry_run_resolve.py  tg_backfill_traces.py  v1r5_dryrun.py  verify_canonical.py
services/pipeline/tests/: conftest.py  test_apply_merges.py  test_enums.py  test_evaluate_pair_guards.py  test_identity_r6_seed_match.py  test_invariants_v10.py  test_invariants_v11.py  test_invariants_v9.py  test_load_insert.py  test_load_validation.py  test_merge_invariant.py  test_merge_persons.py  test_r6_prepass.py  test_r6_temporal_guards.py  test_seeds_matcher.py  test_seeds_wikidata_adapter.py  test_slug.py  test_slug_invariant.py  test_state_prefix_guard.py  test_v8_prefix_containment.py
(+688 files in other folders)
